k8s/overlays/ngrok/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: atlantis
spec:
  ingressClassName: ngrok
  rules:
    - host: example-tunnel.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
